# tablecloth

./: .gitignore  .ocamlformat  .ocamlformat-ignore  Changelog.md  Changes.md  LICENSE  Makefile  README.md  bsconfig.json  build.sh  deploying.md  dune  opam  package-lock.json  package.json  paket.dependencies  run-integration-test.sh  tablecloth-native.opam  tablecloth.mli
.circleci/: config.yml
.github/: dependabot.yml
bs/: bsconfig.json  package-lock.json  package.json  tablecloth.mli
bs/__tests__/: tablecloth_test.ml
bs/src/: TC_Array.ml  TC_Array.mli.start  benchmark_belt_flatten_vs_concat.ml  benchmark_fold_elm_vs_ocaml.ml  benchmark_fold_reduce.ml  compat.ml  tablecloth.ml  tablecloth.mli
bucklescript/src/: Bool.ml  Bool.mli  Comparator.ml  Comparator.mli  Container.ml  Float.mli  Fun.mli  Int.ml  Int.mli  Integer.ml  Integer.rei  Internal.ml  Option.ml  Option.mli  Result.ml  Result.mli  TableclothArray.ml  TableclothArray.mli  TableclothChar.ml  TableclothChar.mli  TableclothFloat.ml  TableclothFun.ml  TableclothFun.mli  TableclothInt.ml  TableclothInt.mli  TableclothList.ml  TableclothList.mli  TableclothMap.ml  TableclothMap.mli  TableclothOption.ml  TableclothOption.mli  TableclothResult.ml  TableclothResult.mli  TableclothSet.ml  TableclothSet.mli  TableclothString.ml  TableclothString.mli  TableclothTuple2.mli  Tuple.mli  Tuple2.ml  (+5 more)
bucklescript/test/: AlcoJest.re  ArrayOcamlSyntaxSpecificTest.ml  ArrayTest.re  BoolTest.re  ComparatorTest.ml  FloatTest.re  FunTest.re  IntTest.re  IntegerPlatformSpecificTest.re  IntegerTest.re  ListTest.re  MapInterfaceTest.js  MapOcamlSyntaxSpecificTest.ml  MapTest.re  OptionTest.re  ResultTest.re  SetInterfaceTest.js  SetOcamlSyntaxSpecificTest.ml  SetTest.re  StringOcamlSyntaxSpecificTest.ml  StringTest.re  TableclothTest.ml  Tuple3Test.re  TupleTest.re
documentation/: README.md  contributing.md  conventions.md  developing.md  documentation.md  installation.md  motivation.md  roadmap.md  usage.md
examples/: tc.ml
fsharp/.config/: dotnet-tools.json
fsharp/src/: Tablecloth.fsproj  paket.references
integration-test/: bsconfig.json  dune  main.ml  package-lock.json  package.json
integration-test/bs/: bsconfig.json  package-lock.json  package.json
integration-test/native/: dune  main.ml
integration-test/rescript/: main.ml
json-files/: Int.absolute.json  Int.add.json  Int.clamp.json  Int.divide.json  Int.divideFloat.json  Int.maximum.json  Int.power.json  Int.subtract.json
native/: tablecloth-native.opam  tablecloth.ml  tablecloth.mli
native/src/: Bool.ml  Comparator.ml  Float.ml  Int.ml  Integer.ml  Internal.ml  TC_Array.ml  Tablecloth.ml  TableclothArray.ml  TableclothArray.mli  TableclothBool.ml  TableclothBool.mli  TableclothChar.ml  TableclothChar.mli  TableclothComparator.mli  TableclothFloat.ml  TableclothFloat.mli  TableclothFun.ml  TableclothFun.mli  TableclothInt.ml  TableclothInt.mli  TableclothList.ml  TableclothList.mli  TableclothMap.ml  TableclothMap.mli  TableclothOption.ml  TableclothOption.mli  TableclothResult.ml  TableclothResult.mli  TableclothSet.ml  TableclothSet.mli  TableclothString.ml  TableclothString.mli  TableclothTuple2.ml  TableclothTuple2.mli  TableclothTuple3.ml  TableclothTuple3.mli  dune  tablecloth.ml  tablecloth.mli
native/test/: AlcoJest.ml  AlcoJest.re  ArrayTest.ml  BoolTest.ml  CharTest.ml  FloatTest.ml  FormatTest.ml  FormatTest.re  FunTest.ml  IntTest.ml  IntegerPlatformSpecificTest.re  ListTest.ml  MapOcamlSyntaxSpecificTest.ml  MapTest.ml  OptionTest.ml  ResultTest.ml  Runtest.ml  Runtest.re  SetOcamlSyntaxSpecificTest.ml  SetTest.ml  StringTest.ml  TableclothTest.ml  Tuple2Test.ml  Tuple3Test.ml  dune  test.ml
ocamldoc-json-generator/: .gitignore  JsonGenerator.ml  Makefile  bsconfig.json  esy.json  package-lock.json  package.json  readme.md
ocamldoc-json-generator/_native/: out
ocamldoc-json-generator/src/: Test.ml
rescript/src/: Internal.ml  Tablecloth.ml  TableclothArray.ml  TableclothArray.mli  TableclothBool.ml  TableclothBool.mli  TableclothChar.ml  TableclothChar.mli  TableclothComparator.mli  TableclothContainer.ml  TableclothFloat.ml  TableclothFloat.mli  TableclothFun.ml  TableclothFun.mli  TableclothInt.ml  TableclothInt.mli  TableclothList.ml  TableclothList.mli  TableclothMap.ml  TableclothMap.mli  TableclothMapInt.ml  TableclothMapInt.mli  TableclothMapString.ml  TableclothMapString.mli  TableclothOption.ml  TableclothOption.mli  TableclothResult.ml  TableclothResult.mli  TableclothSet.ml  TableclothSet.mli  TableclothSetInt.ml  TableclothSetInt.mli  TableclothSetString.ml  TableclothSetString.mli  TableclothString.ml  TableclothString.mli  TableclothTuple2.ml  TableclothTuple2.mli  TableclothTuple3.ml  TableclothTuple3.mli  (+1 more)
rescript/test/: AlcoJest.ml  AlcoJest.re  ArrayOcamlSyntaxSpecificTest.ml  ArrayTest.ml  BoolTest.ml  CharTest.ml  CharTest.re  ComparatorTest.ml  FloatTest.ml  FunTest.ml  IntTest.ml  ListTest.ml  ListTest.re  MapInterfaceTest.js  MapOcamlSyntaxSpecificTest.ml  (+16 more)
src/: generateTest.res  newMethod.res
tablecloth-native/: dune  string.ml  tablecloth.mli  tablecloth.opam
website/: .eslintrc.json  .gitignore  buildPlaygroundArtifacts.js  gatsby-config.js  gatsby-node.js  model-rescript.json  model.json  package-lock.json  package.json  readme.md
yaml-files/: Array.all.yaml  Array.any.yaml  Array.append.yaml  Array.chunksOf.yaml  Array.clone.yaml  Array.compare.yaml  Array.count.yaml  Array.extent.yaml  Array.filter.yaml  Array.find.yaml  Array.findIndex.yaml  Array.first.yaml  Array.flatten.yaml  Array.fromList.yaml  Array.get.yaml  Array.getAt.yaml  Array.includes.yaml  Array.initialize.yaml  Array.intersperse.yaml  Array.isEmpty.yaml  Array.join.yaml  Array.last.yaml  Array.length.yaml  Array.map.yaml  Array.map2.yaml  Array.map3.yaml  Array.mapWithIndex.yaml  Array.maximum.yaml  Array.minimum.yaml  Array.partition.yaml  Array.range.yaml  Array.repeat.yaml  Array.reverse.yaml  Array.setAt.yaml  Array.singleton.yaml  Array.sliding.yaml  Array.sort.yaml  Array.splitAt.yaml  Array.splitWhen.yaml  Array.swap.yaml  (+201 more)
(+169 files in other folders)
