opam-version: "2.0"
name: "tablecloth-native"
version: "0.0.7"
synopsis: "Native OCaml library implementing Tablecloth, a cross-platform standard library for OCaml, Bucklescript and ReasonML"
description: """
Longer description
"""
maintainer: "Paul Biggar <paul@darklang.com>"
authors: "Paul Biggar <paul@darklang.com>"
license: "MIT with some exceptions"
homepage: "https://github.com/darklang/tablecloth"
bug-reports: "https://github.com/darklang/tablecloth/issues"
dev-repo: "git://github.com/darklang/tablecloth"
depends: [ "ocaml" "dune" {build} "base" { >= "v0.10.0" } ]
build: ["dune" "build" "-p" name "-j" jobs]
