opam-version: "2.0"
name: "tablecloth-native"
version: "0.0.7"
synopsis: "Native OCaml library implementing Tablecloth, a cross-platform standard library for OCaml, Bucklescript and ReasonML"
description: """
Tablecloth is an ergonomic, cross-platform, standard library for use with OCaml and ReasonML. It provides an easy-to-use, comprehensive and performant standard library, that has the same API on all OCaml/ReasonML/Bucklescript platforms.
"""
maintainer: "Paul Biggar <paul@darklang.com>"
authors: [
  "Paul Biggar <paul@darklang.com>"
  "Dean Merchant <deanmerchant@gmail.com"
]
license: "MIT with some exceptions"
homepage: "https://github.com/darklang/tablecloth"
bug-reports: "https://github.com/darklang/tablecloth/issues"
dev-repo: "git://github.com/darklang/tablecloth"
depends: [ "ocaml" {>= "4.08" & < "4.11" } "dune" {build} "base" { >= "v0.12.0" & < "v0.14.0" } ]
build: ["dune" "build" "-p" name "-j" jobs]
