opam-version: "2.0"
name: "tablecloth-native"
version: "0.0.8"
synopsis: "Native OCaml library implementing Tablecloth, a cross-platform standard library for OCaml and Rescript"
description: """
Tablecloth is an ergonomic, cross-platform, standard library for use with OCaml and Rescript. It provides an easy-to-use, comprehensive and performant standard library, that has the same API on in OCaml and Rescript.
"""
maintainer: "Paul Biggar <paul@darklang.com>"
authors: [
  "Paul Biggar <paul@darklang.com>"
  "Dean Merchant <deanmerchant@gmail.com"
]
license: "MIT"
homepage: "https://github.com/darklang/tablecloth"
bug-reports: "https://github.com/darklang/tablecloth/issues"
dev-repo: "git://github.com/darklang/tablecloth"
depends: [ "ocaml" {>= "4.08" < "4.13" } "dune" {>= "2.4"} "base" { >= "v0.12.0" & < "v0.15.0" } ]
build: ["dune" "build" "-p" name "-j" jobs]
