(library
 (name tablecloth)
 (public_name tablecloth-native)
 (libraries base str))

(rule
 (target Bool.mli)
 (action
  (copy ../../bucklescript/src/Bool.mli ./Bool.mli)))

(rule
 (target TableclothChar.mli)
 (action
  (copy ../../bucklescript/src/TableclothChar.mli ./TableclothChar.mli)))

(rule
 (target Float.mli)
 (action
  (copy ../../bucklescript/src/Float.mli ./Float.mli)))

(rule
 (target Fun.ml)
 (action
  (copy ../../bucklescript/src/Fun.ml ./Fun.ml)))

(rule
 (target Fun.mli)
 (action
  (copy ../../bucklescript/src/Fun.mli ./Fun.mli)))

(rule
 (target Tuple2.ml)
 (action
  (copy ../../bucklescript/src/Tuple2.ml ./Tuple2.ml)))

(rule
 (target Tuple2.mli)
 (action
  (copy ../../bucklescript/src/Tuple2.mli ./Tuple2.mli)))

(rule
 (target Tuple3.ml)
 (action
  (copy ../../bucklescript/src/Tuple3.ml ./Tuple3.ml)))

(rule
 (target Tuple3.mli)
 (action
  (copy ../../bucklescript/src/Tuple3.mli ./Tuple3.mli)))

(rule
 (target TableclothString.mli)
 (action
  (copy ../../bucklescript/src/TableclothString.mli ./TableclothString.mli)))
