(library
 (name tablecloth)
 (public_name tablecloth-native)
 (libraries base str))

(rule
 (target TableclothBool.mli)
 (action
  (copy ../../rescript/src/TableclothBool.mli ./TableclothBool.mli)))

(rule
 (target TableclothContainer.ml)
 (action
  (copy ../../rescript/src/TableclothContainer.ml
    ./TableclothContainer.ml)))

(rule
 (target TableclothComparator.mli)
 (action
  (copy ../../rescript/src/TableclothComparator.mli
    ./TableclothComparator.mli)))

(rule
 (target TableclothChar.mli)
 (action
  (copy ../../rescript/src/TableclothChar.mli ./TableclothChar.mli)))

(rule
 (target TableclothFloat.mli)
 (action
  (copy ../../rescript/src/TableclothFloat.mli ./TableclothFloat.mli)))

(rule
 (target TableclothInt.mli)
 (action
  (copy ../../rescript/src/TableclothInt.mli ./TableclothInt.mli)))

(rule
 (target TableclothList.mli)
 (action
  (copy ../../rescript/src/TableclothList.mli ./TableclothList.mli)))

(rule
 (target TableclothArray.mli)
 (action
  (copy ../../rescript/src/TableclothArray.mli ./TableclothArray.mli)))

(rule
 (target TableclothTuple2.ml)
 (action
  (copy ../../rescript/src/TableclothTuple2.ml ./TableclothTuple2.ml)))

(rule
 (target TableclothTuple2.mli)
 (action
  (copy ../../rescript/src/TableclothTuple2.mli ./TableclothTuple2.mli)))

(rule
 (target TableclothTuple3.ml)
 (action
  (copy ../../rescript/src/TableclothTuple3.ml ./TableclothTuple3.ml)))

(rule
 (target TableclothTuple3.mli)
 (action
  (copy ../../rescript/src/TableclothTuple3.mli ./TableclothTuple3.mli)))

(rule
 (target TableclothString.mli)
 (action
  (copy ../../rescript/src/TableclothString.mli ./TableclothString.mli)))

(rule
 (target TableclothFun.ml)
 (action
  (copy ../../rescript/src/TableclothFun.ml ./TableclothFun.ml)))

(rule
 (target TableclothFun.mli)
 (action
  (copy ../../rescript/src/TableclothFun.mli ./TableclothFun.mli)))

(rule
 (target TableclothOption.mli)
 (action
  (copy ../../rescript/src/TableclothOption.mli ./TableclothOption.mli)))

(rule
 (target TableclothResult.mli)
 (action
  (copy ../../rescript/src/TableclothResult.mli ./TableclothResult.mli)))
