(executable
 (name runtest)
 (flags
  (-warn-error +A))
 (libraries tablecloth alcotest))

(rule
 (target BoolTest.re)
 (action
  (copy ../../bucklescript/test/BoolTest.re ./BoolTest.re)))

(rule
 (target CharTest.re)
 (action
  (copy ../../bucklescript/test/CharTest.re ./CharTest.re)))

(rule
 (target FloatTest.re)
 (action
  (copy ../../bucklescript/test/FloatTest.re ./FloatTest.re)))

(rule
 (target IntTest.re)
 (action
  (copy ../../bucklescript/test/IntTest.re ./IntTest.re)))

(rule
 (target FunTest.re)
 (action
  (copy ../../bucklescript/test/FunTest.re ./FunTest.re)))

(rule
 (alias runtest)
 (action
  (run ./runtest.exe)))
