(executable
 (name runtest)
 (flags
  (-warn-error +A))
 (libraries tablecloth alcotest))

(rule
 (target ArrayTest.re)
 (action
  (copy ../../rescript/test/ArrayTest.re ./ArrayTest.re)))

(rule
 (target BoolTest.re)
 (action
  (copy ../../rescript/test/BoolTest.re ./BoolTest.re)))

(rule
 (target CharTest.re)
 (action
  (copy ../../rescript/test/CharTest.re ./CharTest.re)))

(rule
 (target ComparatorTest.ml)
 (action
  (copy ../../rescript/test/ComparatorTest.ml ./ComparatorTest.ml)))

(rule
 (target FloatTest.re)
 (action
  (copy ../../rescript/test/FloatTest.re ./FloatTest.re)))

(rule
 (target FunTest.re)
 (action
  (copy ../../rescript/test/FunTest.re ./FunTest.re)))

(rule
 (target IntTest.re)
 (action
  (copy ../../rescript/test/IntTest.re ./IntTest.re)))

(rule
 (target OptionTest.re)
 (action
  (copy ../../rescript/test/OptionTest.re ./OptionTest.re)))

(rule
 (target ResultTest.re)
 (action
  (copy ../../rescript/test/ResultTest.re ./ResultTest.re)))

(rule
 (target ListTest.re)
 (action
  (copy ../../rescript/test/ListTest.re ./ListTest.re)))

(rule
 (target MapTest.re)
 (action
  (copy ../../rescript/test/MapTest.re ./MapTest.re)))

(rule
 (target MapOcamlSyntaxSpecificTest.ml)
 (action
  (copy ../../rescript/test/MapOcamlSyntaxSpecificTest.ml
    ./MapOcamlSyntaxSpecificTest.ml)))

(rule
 (target SetTest.re)
 (action
  (copy ../../rescript/test/SetTest.re ./SetTest.re)))

(rule
 (target SetOcamlSyntaxSpecificTest.ml)
 (action
  (copy ../../rescript/test/SetOcamlSyntaxSpecificTest.ml
    ./SetOcamlSyntaxSpecificTest.ml)))

(rule
 (target StringTest.re)
 (action
  (copy ../../rescript/test/StringTest.re ./StringTest.re)))

(rule
 (target Tuple2Test.re)
 (action
  (copy ../../rescript/test/Tuple2Test.re ./Tuple2Test.re)))

(rule
 (target Tuple3Test.re)
 (action
  (copy ../../rescript/test/Tuple3Test.re ./Tuple3Test.re)))

(rule
 (alias runtest)
 (action
  (run ./runtest.exe)))
