(executable
 (name runtest)
 (flags
  (-warn-error +A))
 (libraries tablecloth alcotest))

(rule
 (target ArrayTest.ml)
 (action
  (copy ../../rescript/test/ArrayTest.ml ./ArrayTest.ml)))

(rule
 (target BoolTest.ml)
 (action
  (copy ../../rescript/test/BoolTest.ml ./BoolTest.ml)))

(rule
 (target CharTest.ml)
 (action
  (copy ../../rescript/test/CharTest.ml ./CharTest.ml)))

(rule
 (target ComparatorTest.ml)
 (action
  (copy ../../rescript/test/ComparatorTest.ml ./ComparatorTest.ml)))

(rule
 (target FloatTest.ml)
 (action
  (copy ../../rescript/test/FloatTest.ml ./FloatTest.ml)))

(rule
 (target FunTest.ml)
 (action
  (copy ../../rescript/test/FunTest.ml ./FunTest.ml)))

(rule
 (target IntTest.ml)
 (action
  (copy ../../rescript/test/IntTest.ml ./IntTest.ml)))

(rule
 (target OptionTest.ml)
 (action
  (copy ../../rescript/test/OptionTest.ml ./OptionTest.ml)))

(rule
 (target ResultTest.ml)
 (action
  (copy ../../rescript/test/ResultTest.ml ./ResultTest.ml)))

(rule
 (target ListTest.ml)
 (action
  (copy ../../rescript/test/ListTest.ml ./ListTest.ml)))

(rule
 (target MapTest.ml)
 (action
  (copy ../../rescript/test/MapTest.ml ./MapTest.ml)))

(rule
 (target MapOcamlSyntaxSpecificTest.ml)
 (action
  (copy ../../rescript/test/MapOcamlSyntaxSpecificTest.ml
    ./MapOcamlSyntaxSpecificTest.ml)))

(rule
 (target SetTest.ml)
 (action
  (copy ../../rescript/test/SetTest.ml ./SetTest.ml)))

(rule
 (target SetOcamlSyntaxSpecificTest.ml)
 (action
  (copy ../../rescript/test/SetOcamlSyntaxSpecificTest.ml
    ./SetOcamlSyntaxSpecificTest.ml)))

(rule
 (target StringTest.ml)
 (action
  (copy ../../rescript/test/StringTest.ml ./StringTest.ml)))

(rule
 (target Tuple2Test.ml)
 (action
  (copy ../../rescript/test/Tuple2Test.ml ./Tuple2Test.ml)))

(rule
 (target Tuple3Test.ml)
 (action
  (copy ../../rescript/test/Tuple3Test.ml ./Tuple3Test.ml)))

(rule
 (alias runtest)
 (action
  (run ./runtest.exe)))
